# ircmesi

./: .env  .gitignore  Cargo.toml  LICENSE  README.txt  robot.toml  run.sh
migrations/2018-10-08-072059_create_post/: down.sql  up.sql
resources/: main.js
src/: main.rs  mesi.rs  webs.rs
src/sqlib/: mod.rs  models.rs  schema.rs
templates/: index.hbs
