[package]
name = "mesi"
version = "0.1.3"
authors = ["ot0 a6u <ot0a6u@gmail.com>"]

[dependencies]
encoding = "*"
toml = "*"
serde = "*"
serde_derive ="*"
regex = "*"
chrono = "*"

diesel = {version = "*", features = ["sqlite", "chrono"]}
dotenv = "*"

iron = "*"
router = "*"
mount = "*"
handlebars-iron = "*"
params = "*"
staticfile = "*"
